crates/math-core/tests/snapshots/error_test__unsupported_environment.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{xmatrix} 1 \\end{xmatrix}"
---
Error: Unknown environment "xmatrix".
   ╭─[ <input>:1:7 ]
   │
 1 │ \begin{xmatrix} 1 \end{xmatrix}
   │       ────┬────  
   │           ╰────── unknown environment
───╯
